# functional_java

./: .bazelrc  BUILD  WORKSPACE
src/: BUILD.bazel  targets.bzl
src/main/java/com/actor/: AbstractActor.java  Actor.java  ActorContext.java  DaemonThreadFactory.java  MessageProcessor.java
src/main/java/com/assertion/: Assertion.java
src/main/java/com/functional/: Case.java  Effect.java  Executable.java  Function.java  Nothing.java  QuadFunction.java  Result.java  StateTuple.java  TailCall.java  Tuple.java  Tuple3.java  Tuple4.java  Tuple5.java
src/main/java/com/io/: AbstractReader.java  Console.java  ConsoleReader.java  FileReader.java  IO.java  Input.java
src/main/java/com/lazy/: Stream.java
src/main/java/com/misc/: MemoryMonitor.java
src/main/java/com/prop/: PropertyReader.java
src/main/java/com/state/: Condition.java  Generator.java  JavaRNG.java  Nothing.java  RNG.java  Random.java  SimpleRNG.java  State.java  StateMachine.java  Transition.java
src/main/java/com/util/: CollectionUtilities.java  Either.java  List.java  Map.java  Memoizer.java  Option.java  RBTree.java  Result.java  Tree.java
src/test/java/com/actor/fibonacci/: Fibonacci.java  Manager.java  Worker.java
src/test/java/com/actor/pingpong/: PingPong.java  Player.java
src/test/java/com/functional/: CaseTest.java  ExecutableTest.java  FunctionTest.java  TailCallTest.java
src/test/java/com/io/: ConsoleTest.java  IOTest.java  Person.java  ReadConsole.java  ReadFile.java  TestReader.java
src/test/java/com/lazy/: StreamTest.java
src/test/java/com/prop/: PersonReader.java  PropertyReaderTest.java
src/test/java/com/state/: Atm.java  Deposit.java  Input.java  JavaRNGTest.java  Outcome.java  StateTest.java  WithDraw.java
src/test/java/com/util/: CollectionUtilitiesTest.java  EitherTest.java  ListTest.java  MemoizeTest.java  OptionTest.java  RBTreeTest.java  ResultTest.java  TreeTest.java
src/test/resources/: BUILD.bazel  data.txt  sample.properties
