#package(default_visibility = ["//src:__subpackages__"])
package(default_visibility = ["//visibility:public"])

load(":targets.bzl", "TARGETS")

java_library(
    name = "functional_java",
    srcs = [
        "main/java/com/functional/Case.java",
        "main/java/com/functional/Effect.java",
        "main/java/com/functional/Executable.java",
        "main/java/com/functional/Function.java",
        "main/java/com/functional/QuadFunction.java",
        "main/java/com/functional/StateTuple.java",
        "main/java/com/functional/TailCall.java",
        "main/java/com/functional/Tuple.java",
        "main/java/com/functional/Tuple3.java",
        "main/java/com/functional/Tuple4.java",
        "main/java/com/functional/Tuple5.java",
        "main/java/com/io/AbstractReader.java",
        "main/java/com/io/Input.java",
        "main/java/com/io/ConsoleReader.java",
        "main/java/com/io/FileReader.java",
        "main/java/com/lazy/Stream.java",
        "main/java/com/misc/MemoryMonitor.java",
        "main/java/com/state/Generator.java",
        "main/java/com/state/JavaRNG.java",
        "main/java/com/state/Nothing.java",
        "main/java/com/state/Condition.java",
        "main/java/com/state/RNG.java",
        "main/java/com/state/Random.java",
        "main/java/com/state/SimpleRNG.java",
        "main/java/com/state/State.java",
        "main/java/com/state/StateMachine.java",
        "main/java/com/state/Transition.java",
        "main/java/com/util/CollectionUtilities.java",
        "main/java/com/util/Either.java",
        "main/java/com/util/List.java",
        "main/java/com/util/Map.java",
        "main/java/com/util/Memoizer.java",
        "main/java/com/util/Option.java",
        "main/java/com/util/RBTree.java",
        "main/java/com/util/Result.java",
        "main/java/com/util/Tree.java",
    ],
)

java_library(
    name = "atm_simulator",
    srcs = [
        "test/java/com/state/Atm.java",
        "test/java/com/state/Deposit.java",
        "test/java/com/state/WithDraw.java",
        "test/java/com/state/Input.java",
        "test/java/com/state/Outcome.java"
    ],
    deps = [
        ":functional_java"
    ],
    visibility = ["//visibility:private"]
)

java_library(
    name = "person",
    srcs = [
        "test/java/com/io/Person.java",
    ],
    deps = [
            ":functional_java",
        ],
    resources = [
        "//src/test/resources:persons_io",
    ],
    visibility = [
        "//visibility:private"
    ]
)

java_test(
    name = "console_io",
    srcs = [
        "test/java/com/io/ReadConsole.java",
        "test/java/com/io/TestReader.java"
    ],
    deps = [
        ":functional_java",
        "@maven//:junit_junit",
        ":person"
    ],
    test_class = "com.io.TestReader",
    visibility = [
        "//visibility:private",
    ]
)

[
    java_test(
        name = "test_" + name,
        srcs = files,
        test_class = clas,
        deps = [
            ":functional_java",
            "@maven//:junit_junit"
        ] + dependencies,
        visibility = [
            "//visibility:private"
        ]
    )
    for name, files, clas, dependencies in TARGETS
]
