#package(default_visibility = ["//src:__subpackages__"])
package(default_visibility = ["//visibility:public"])

load(":targets.bzl", "TARGETS")

java_library(
    name = "functional_java",
    srcs = [
        "main/java/com/actor/AbstractActor.java",
        "main/java/com/actor/Actor.java",
        "main/java/com/actor/ActorContext.java",
        "main/java/com/actor/DaemonThreadFactory.java",
        "main/java/com/actor/MessageProcessor.java",
        "main/java/com/functional/Case.java",
        "main/java/com/functional/Effect.java",
        "main/java/com/functional/Executable.java",
        "main/java/com/functional/Function.java",
        "main/java/com/functional/Nothing.java",
        "main/java/com/functional/QuadFunction.java",
        "main/java/com/functional/StateTuple.java",
        "main/java/com/functional/TailCall.java",
        "main/java/com/functional/Tuple.java",
        "main/java/com/functional/Tuple3.java",
        "main/java/com/functional/Tuple4.java",
        "main/java/com/functional/Tuple5.java",
        "main/java/com/io/AbstractReader.java",
        "main/java/com/io/Console.java",
        "main/java/com/io/ConsoleReader.java",
        "main/java/com/io/FileReader.java",
        "main/java/com/io/IO.java",
        "main/java/com/io/Input.java",
        "main/java/com/lazy/Stream.java",
        "main/java/com/misc/MemoryMonitor.java",
        "main/java/com/state/Condition.java",
        "main/java/com/state/Generator.java",
        "main/java/com/state/JavaRNG.java",
        "main/java/com/state/RNG.java",
        "main/java/com/state/Random.java",
        "main/java/com/state/SimpleRNG.java",
        "main/java/com/state/State.java",
        "main/java/com/state/StateMachine.java",
        "main/java/com/state/Transition.java",
        "main/java/com/util/CollectionUtilities.java",
        "main/java/com/util/Either.java",
        "main/java/com/util/List.java",
        "main/java/com/util/Map.java",
        "main/java/com/util/Memoizer.java",
        "main/java/com/util/Option.java",
        "main/java/com/util/RBTree.java",
        "main/java/com/util/Result.java",
        "main/java/com/util/Tree.java",
        "main/java/com/assertion/Assertion.java"
    ],
)

java_library(
    name = "atm_simulator",
    srcs = [
        "test/java/com/state/Atm.java",
        "test/java/com/state/Deposit.java",
        "test/java/com/state/Input.java",
        "test/java/com/state/Outcome.java",
        "test/java/com/state/WithDraw.java",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":functional_java",
    ],
)

java_library(
    name = "person",
    srcs = [
        "test/java/com/io/Person.java",
    ],
    resources = [
        "//src/test/resources:persons_io",
    ],
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":functional_java",
    ],
)

java_test(
    name = "console_io",
    srcs = [
        "test/java/com/io/ReadConsole.java",
        "test/java/com/io/TestReader.java",
    ],
    test_class = "com.io.TestReader",
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":functional_java",
        ":person",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "console_test_io",
    srcs = [
        "test/java/com/io/ConsoleTest.java",
    ],
    test_class = "com.io.ConsoleTest",
    visibility = [
        "//visibility:private",
    ],
    deps = [
        ":functional_java",
        "@maven//:junit_junit",
    ],
)

java_library(
    name = "pingpong",
    srcs = [
        "test/java/com/actor/pingpong/Player.java",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":functional_java",
    ],
)

java_library(
    name = "fibonacci",
    srcs = [
        "test/java/com/actor/fibonacci/Worker.java",
        "test/java/com/actor/fibonacci/Manager.java",
    ],
    visibility = ["//visibility:private"],
    deps = [
        ":functional_java",
    ],
)

[
    java_test(
        name = "test_" + name,
        srcs = files,
        test_class = clas,
        visibility = [
            "//visibility:private",
        ],
        deps = [
            ":functional_java",
            "@maven//:junit_junit",
        ] + dependencies,
    )
    for name, files, clas, dependencies in TARGETS
]
